--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </header>
   <main class="p-4 lg:container mx-auto mt-14">
     <!-- section-1 -->
-    <section class="p-4 lg:container mx-auto">
+    <section class="p-4 lg:container mx-auto mt-20">
       <div class=" p-10 lg:flex justify-between bg-blue-950  rounded-3xl bg-no-repeat bg-bottom bg-cover lg:p-20 "
         style="background-image: url(./images/banner.png);">
         <div class="">
@@ -175,7 +175,184 @@
 
     </section>
     <!-- section-2 -->
+    <section class="p-4 lg:container mx-auto mt-20">
+      <div class="text-center">
+        <h1 class="text-7xl font-bold pb-5">Let's Discuss</h1>
+        <p class="text-2xl  text-gray-400 ">Yes, you can run unit tests and view the results directly
+          within
+          the app. <br> The
+          integrated
+          testing features
+          allow for a
+          streamlined .</p>
+      </div>
+    </section>
+    <!-- section-3 -->
+    <section class="p-4 lg:container mx-auto mt-20">
+      <div class="p-4 lg:gap-10 lg:container mx-auto flex-row lg:flex justify-between">
+        <div class="lg:w-3/5">
+          <div class="lg:flex   gap-7 bg-orange-200 p-5 lg:p-10 rounded-2xl   mb-10">
+            <div class="indicator">
+              <span class="indicator-item badge badge-secondary"></span>
+              <div class="grid w-32 h-32 bg-base-300 place-items-center">content</div>
+            </div>
+            <div>
+              <div class="flex gap-7">
+                <p>#music</p>
+                <p> Author : <span>Awlad Hossai</span></p>
+              </div>
+              <h1 class="text-3xl font-bold mt-5 ">10 Kids Unaware of Their Halloween Costume</h1>
+              <p class="mt-4 text-xl">It’s one thing to subject yourself to ha Halloween costume mishap because, hey
+                that’s
+                your
+                prerogative</p>
+              <hr class="border-dashed mt-5">
+              <div class="flex justify-between mt-5">
+                <div class="mt-5">
+                  <i class="fa-solid fa-message"><span class="pl-3 pr-8">560</span></i>
+                  <i class="fa-solid fa-eye"><span class="pl-3 pr-8">560</span></i>
+                  <i class="fa-solid fa-clock"><span class="pl-3 ">560</span></i>
+                </div>
+                <img src="./images/Vector.png" alt="" class="mt-5 mb-10">
+              </div>
+            </div>
+          </div>
+          <div class="lg:flex   gap-7 bg-orange-200 p-5 lg:p-10 rounded-2xl   mb-10">
+            <div class="indicator">
+              <span class="indicator-item badge badge-secondary"></span>
+              <div class="grid w-32 h-32 bg-base-300 place-items-center">content</div>
+            </div>
+            <div>
+              <div class="flex gap-7">
+                <p>#music</p>
+                <p> Author : <span>Awlad Hossai</span></p>
+              </div>
+              <h1 class="text-3xl font-bold mt-5 ">10 Kids Unaware of Their Halloween Costume</h1>
+              <p class="mt-4 text-xl">It’s one thing to subject yourself to ha Halloween costume mishap because, hey
+                that’s
+                your
+                prerogative</p>
+              <hr class="border-dashed mt-5">
+              <div class="flex justify-between mt-5">
+                <div class="mt-5">
+                  <i class="fa-solid fa-message"><span class="pl-3 pr-8">560</span></i>
+                  <i class="fa-solid fa-eye"><span class="pl-3 pr-8">560</span></i>
+                  <i class="fa-solid fa-clock"><span class="pl-3 ">560</span></i>
+                </div>
+                <img src="./images/Vector.png" alt="" class="mt-5 mb-10">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class=" bg-orange-200 p-8 rounded-2xl lg:w-1/3">
+          <div class="flex justify-between mb-10 ">
+            <h1 class=" text-2xl font-bold">Title</h1>
+            <p class="text-lg">Make as read ( <span>4</span> )</p>
+          </div>
+          <div class="flex justify-between gap-5 bg-white rounded-2xl p-5 mb-5 ">
+            <p class=" font-bold">10 Kids Unaware of Their
+              <br> Halloween Costume
+            </p>
+            <div><i class="fa-solid fa-eye"><span class="pl-3 ">560</span></i></div>
+          </div>
+          <div class="flex justify-between gap-5 bg-white rounded-2xl p-5  mb-5">
+            <p class=" font-bold">10 Kids Unaware of Their
+              <br> Halloween Costume
+            </p>
+            <div><i class="fa-solid fa-eye"><span class="pl-3 ">560</span></i></div>
+          </div>
+        </div>
+      </div>
 
+    </section>
+    <!-- section-4 -->
+    <section class="p-4 lg:container mx-auto mt-20">
+      <div class=" flex-row lg:flex justify-between  bg-blue-950 rounded-3xl p-10">
+        <div class="p-10">
+          <h1 class="text-white text-2xl lg:text-5xl mb-10 font-bold">Join Our Forum</h1>
+          <p class="text-white lg:text-xl mb-10">Share your favorite opinion and win and wp forum coffee mug! Yes, you
+            can
+            run unit <br> tests and view the
+            results directly
+            within the app.</p>
+          <button class="btn btn-active btn-secondary">Registered Now</button>
+        </div>
+        <div>
+          <img src="./images/joinforum.png" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- section-5 -->
+    <section class="p-4 lg:container mx-auto mt-20">
+      <div class="text-center">
+        <h1 class="text-7xl font-bold pb-5">Latest Posts</h1>
+        <p class="text-2xl  text-gray-400 ">Yes, you can run unit tests and view the results directly within the app.
+          The integrated testing features <br> allow for a
+          streamlined .</p>
+      </div>
+    </section>
+    <!-- section-6 -->
+    <section class="p-4 lg:container mx-auto mt-20 mb-20">
+      <div class="grid lg:grid-cols-3 gap-4  ">
+        <div class="card lg:w-96 bg-base-100 shadow-xl p-10 border-2 border-solid">
+          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
+          </figure>
+          <div class="card-body p-0 mt-5">
+            <h2 class="card-title">
+              What will a mars habitat force that impact in our daily life!!!
+            </h2>
+            <p>Yes, you can run unit tests and view the results directly within the app.</p>
+            <div class="flex gap-5 mt-5">
+              <div>
+                <img src="./images/Ellipse 1.png" alt="">
+              </div>
+              <div>
+                <h1 class="font-semibold">Cameron Williamson</h1>
+                <p>Unknown</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card lg:w-96 bg-base-100 shadow-xl p-10 border-2 border-solid">
+          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
+          </figure>
+          <div class="card-body p-0 mt-5">
+            <h2 class="card-title">
+              What will a mars habitat force that impact in our daily life!!!
+            </h2>
+            <p>Yes, you can run unit tests and view the results directly within the app.</p>
+            <div class="flex gap-5 mt-5">
+              <div>
+                <img src="./images/Ellipse 1.png" alt="">
+              </div>
+              <div>
+                <h1 class="font-semibold">Cameron Williamson</h1>
+                <p>Unknown</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card lg:w-96 bg-base-100 shadow-xl p-10 border-2 border-solid">
+          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
+          </figure>
+          <div class="card-body p-0 mt-5">
+            <h2 class="card-title">
+              What will a mars habitat force that impact in our daily life!!!
+            </h2>
+            <p>Yes, you can run unit tests and view the results directly within the app.</p>
+            <div class="flex gap-5 mt-5">
+              <div>
+                <img src="./images/Ellipse 1.png" alt="">
+              </div>
+              <div>
+                <h1 class="font-semibold">Cameron Williamson</h1>
+                <p>Unknown</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
