footer design finish

--- a/index.html
+++ b/index.html
@@ -354,9 +354,35 @@
       </div>
     </section>
   </main>
+  <footer class=" bg-neutral-200">
+    <footer class="footer footer-center p-10 bg-neutral-200 ">
+      <aside>
+        <h1>
+          <a class="btn btn-ghost text-4xl font-extrabold mt-5">OreTro</a>
+        </h1>
+        <p class="font-bold">
+          Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots <br> in a piece of classical
+          Latin literature
+          from 45 BC
+        </p>
+      </aside>
+      <nav>
+        <div class="grid grid-flow-col gap-4 ">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-github"></i>
+        </div>
+      </nav>
+
+    </footer>
+    <div class="border-t-2 border-gray-400 mt-5 mb-10 w-3/4 mx-auto"> </div>
+    <p class="text-center  pb-10">2017, All Rights Reserved.</p>
+  </footer>
 
 
   <script src="index.js"></script>
+
 </body>
 
 </html>
