loading spinner function done

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               </ul>
             </div>
           </div>
-          <a class="btn btn-ghost text-4xl font-extrabold">OreTro</a>
+          <a class="btn btn-ghost text-4xl font-extrabold text-[#797dfc]">OreTro</a>
         </div>
         <div class="navbar-end">
           <div class="hidden lg:flex">
@@ -159,7 +159,8 @@
         style="background-image: url(./images/banner.png);">
         <div class="">
           <div>
-            <h1 class="text-3xl font-bold lg:text-8xl text-white pb-9">Welcome to the <br> ReTro Forum</h1>
+            <h1 class="text-3xl font-bold lg:text-8xl text-white pb-9">Welcome to the <br><span
+                class=" text-[#797dfc]">ReTro</span> Forum</h1>
             <p class="lg:text-2xl text-white pb-9">Share your favorite opinion and win and wp <br> forum coffee mug!</p>
             <div class="input-container">
               <input type="text" class="custom-input" id="myInput" placeholder="Search here anything">
@@ -188,74 +189,55 @@
       </div>
     </section>
     <!-- section-3 -->
+
     <section class="p-4 lg:container mx-auto mt-20">
+      <div class="text-center hidden" id="loading-spinner"><span class="loading loading-bars loading-lg w-20"></span>
+      </div>
       <div class="p-4 lg:gap-10 lg:container mx-auto flex-row lg:flex justify-between">
-        <div class="lg:w-3/5">
+        <div id="category-bar-container" class="lg:w-3/5">
           <div class="lg:flex   gap-7 bg-orange-200 p-5 lg:p-10 rounded-2xl   mb-10">
             <div class="indicator">
               <span class="indicator-item badge badge-secondary"></span>
-              <div class="grid w-32 h-32 bg-base-300 place-items-center">content</div>
+              <div class="grid w-32 h-32 bg-base-300 place-items-center rounded-2xl"><img src="./images/Ellipse 1.png"
+                  alt="" class="rounded-2xl"></div>
             </div>
             <div>
-              <div class="flex gap-7">
-                <p>#music</p>
-                <p> Author : <span>Awlad Hossai</span></p>
+              <div>
+                <div class="flex gap-7">
+                  <p class="font-bold">#music</p>
+                  <p class="font-bold"> Author : <span>Awlad Hossai</span></p>
+                </div>
+                <h1 class="text-3xl font-bold mt-5 " id="title">10 Kids Unaware of Their Halloween Costume</h1>
+                <p class="mt-4 text-xl">It’s one thing to subject yourself to ha Halloween costume mishap because, hey
+                  that’s
+                  your
+                  prerogative</p>
+                <hr class="border-dashed mt-5">
               </div>
-              <h1 class="text-3xl font-bold mt-5 ">10 Kids Unaware of Their Halloween Costume</h1>
-              <p class="mt-4 text-xl">It’s one thing to subject yourself to ha Halloween costume mishap because, hey
-                that’s
-                your
-                prerogative</p>
-              <hr class="border-dashed mt-5">
-              <div class="flex justify-between mt-5">
+              <div class=" flex-row lg:flex  lg:gap-72 mt-5">
                 <div class="mt-5">
                   <i class="fa-solid fa-message"><span class="pl-3 pr-8">560</span></i>
-                  <i class="fa-solid fa-eye"><span class="pl-3 pr-8">560</span></i>
+                  <i class="fa-solid fa-eye" id="view"><span class="pl-3 pr-8">560</span></i>
                   <i class="fa-solid fa-clock"><span class="pl-3 ">560</span></i>
                 </div>
-                <img src="./images/Vector.png" alt="" class="mt-5 mb-10">
-              </div>
-            </div>
-          </div>
-          <div class="lg:flex   gap-7 bg-orange-200 p-5 lg:p-10 rounded-2xl   mb-10">
-            <div class="indicator">
-              <span class="indicator-item badge badge-secondary"></span>
-              <div class="grid w-32 h-32 bg-base-300 place-items-center">content</div>
-            </div>
-            <div>
-              <div class="flex gap-7">
-                <p>#music</p>
-                <p> Author : <span>Awlad Hossai</span></p>
-              </div>
-              <h1 class="text-3xl font-bold mt-5 ">10 Kids Unaware of Their Halloween Costume</h1>
-              <p class="mt-4 text-xl">It’s one thing to subject yourself to ha Halloween costume mishap because, hey
-                that’s
-                your
-                prerogative</p>
-              <hr class="border-dashed mt-5">
-              <div class="flex justify-between mt-5">
-                <div class="mt-5">
-                  <i class="fa-solid fa-message"><span class="pl-3 pr-8">560</span></i>
-                  <i class="fa-solid fa-eye"><span class="pl-3 pr-8">560</span></i>
-                  <i class="fa-solid fa-clock"><span class="pl-3 ">560</span></i>
+                <div class="">
+                  <button onclick="handleClick()"><img src="./images/Vector.png" alt="" class="mt-5 mb-10"></button>
                 </div>
-                <img src="./images/Vector.png" alt="" class="mt-5 mb-10">
               </div>
             </div>
           </div>
         </div>
-        <div class=" bg-orange-200 p-8 rounded-2xl lg:w-1/3">
+        <div class=" p-8 rounded-2xl lg:w-1/3">
           <div class="flex justify-between mb-10 ">
             <h1 class=" text-2xl font-bold">Title</h1>
             <p class="text-lg">Make as read ( <span>4</span> )</p>
           </div>
-          <div class="flex justify-between gap-5 bg-white rounded-2xl p-5 mb-5 ">
-            <p class=" font-bold">10 Kids Unaware of Their
-              <br> Halloween Costume
+          <div class="flex justify-between gap-5 bg-gray-400 rounded-2xl p-5 mb-5 ">
+            <p class=" font-bold" id="title2">
             </p>
-            <div><i class="fa-solid fa-eye"><span class="pl-3 ">560</span></i></div>
+            <div id="view2"><i class="fa-solid fa-eye"><span class="pl-3 "></span></i></div>
           </div>
-          <div class="flex justify-between gap-5 bg-white rounded-2xl p-5  mb-5">
+          <div class="flex justify-between gap-5 bg-gray-400 rounded-2xl p-5  mb-5">
             <p class=" font-bold">10 Kids Unaware of Their
               <br> Halloween Costume
             </p>
@@ -293,64 +275,10 @@
     </section>
     <!-- section-6 -->
     <section class="p-4 lg:container mx-auto mt-20 mb-20">
-      <div class="grid lg:grid-cols-3 gap-4  ">
-        <div class="card lg:w-96 bg-base-100 shadow-xl p-10 border-2 border-solid">
-          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
-          </figure>
-          <div class="card-body p-0 mt-5">
-            <h2 class="card-title">
-              What will a mars habitat force that impact in our daily life!!!
-            </h2>
-            <p>Yes, you can run unit tests and view the results directly within the app.</p>
-            <div class="flex gap-5 mt-5">
-              <div>
-                <img src="./images/Ellipse 1.png" alt="">
-              </div>
-              <div>
-                <h1 class="font-semibold">Cameron Williamson</h1>
-                <p>Unknown</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card lg:w-96 bg-base-100 shadow-xl p-10 border-2 border-solid">
-          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
-          </figure>
-          <div class="card-body p-0 mt-5">
-            <h2 class="card-title">
-              What will a mars habitat force that impact in our daily life!!!
-            </h2>
-            <p>Yes, you can run unit tests and view the results directly within the app.</p>
-            <div class="flex gap-5 mt-5">
-              <div>
-                <img src="./images/Ellipse 1.png" alt="">
-              </div>
-              <div>
-                <h1 class="font-semibold">Cameron Williamson</h1>
-                <p>Unknown</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card lg:w-96 bg-base-100 shadow-xl p-10 border-2 border-solid">
-          <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" />
-          </figure>
-          <div class="card-body p-0 mt-5">
-            <h2 class="card-title">
-              What will a mars habitat force that impact in our daily life!!!
-            </h2>
-            <p>Yes, you can run unit tests and view the results directly within the app.</p>
-            <div class="flex gap-5 mt-5">
-              <div>
-                <img src="./images/Ellipse 1.png" alt="">
-              </div>
-              <div>
-                <h1 class="font-semibold">Cameron Williamson</h1>
-                <p>Unknown</p>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="text-center hidden" id="loading-spinner2"><span class="loading loading-bars loading-lg w-20"></span>
+      </div>
+      <div class="grid lg:grid-cols-3 gap-3  " id="latestCard">
+
       </div>
     </section>
   </main>
