Show Loader On The Screen At Least 2s When Fetching Data

--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
                 </li>
                 <li>
                   <div class="tooltip m-1"><i class="fa-solid fa-pen border-2 border-solid p-2 rounded-full"></i>
-                    <span class="tooltiptext">Write</span>
+                    <span class="tooltiptext">Edit</span>
                   </div>
                 </li>
                 <li>
                   <div class="tooltip m-1"><i class="fa-solid fa-user-plus border-2 border-solid p-2 rounded-full"></i>
-                    <span class="tooltiptext">Write</span>
+                    <span class="tooltiptext">add</span>
                   </div>
                 </li>
                 <li>
                   <div class="tooltip m-1"><i class="fa-solid fa-flag border-2 border-solid p-2 rounded-full"></i>
-                    <span class="tooltiptext">Write</span>
+                    <span class="tooltiptext">Flag</span>
                   </div>
                 </li>
               </ul>
@@ -137,13 +137,13 @@
               <span class="tooltiptext">Home</span>
             </div>
             <div class="tooltip m-1"><i class="fa-solid fa-pen border-2 border-solid p-2 rounded-full"></i>
-              <span class="tooltiptext">Write</span>
+              <span class="tooltiptext">Edit</span>
             </div>
             <div class="tooltip m-1"><i class="fa-solid fa-user-plus border-2 border-solid p-2 rounded-full"></i>
               <span class="tooltiptext">Add</span>
             </div>
             <div class="tooltip m-1 "><i class="fa-solid fa-flag border-2 border-solid p-2 rounded-full"></i>
-              <span class="tooltiptext">Tooltip</span>
+              <span class="tooltiptext">flag</span>
             </div>
           </div>
         </div>
