item append in new div

--- a/index.html
+++ b/index.html
@@ -195,53 +195,14 @@
       </div>
       <div class="p-4 lg:gap-10 lg:container mx-auto flex-row lg:flex justify-between">
         <div id="category-bar-container" class="lg:w-3/5">
-          <div class="lg:flex   gap-7 bg-orange-200 p-5 lg:p-10 rounded-2xl   mb-10">
-            <div class="indicator">
-              <span class="indicator-item badge badge-secondary"></span>
-              <div class="grid w-32 h-32 bg-base-300 place-items-center rounded-2xl"><img src="./images/Ellipse 1.png"
-                  alt="" class="rounded-2xl"></div>
-            </div>
-            <div>
-              <div>
-                <div class="flex gap-7">
-                  <p class="font-bold">#music</p>
-                  <p class="font-bold"> Author : <span>Awlad Hossai</span></p>
-                </div>
-                <h1 class="text-3xl font-bold mt-5 " id="title">10 Kids Unaware of Their Halloween Costume</h1>
-                <p class="mt-4 text-xl">It’s one thing to subject yourself to ha Halloween costume mishap because, hey
-                  that’s
-                  your
-                  prerogative</p>
-                <hr class="border-dashed mt-5">
-              </div>
-              <div class=" flex-row lg:flex  lg:gap-72 mt-5">
-                <div class="mt-5">
-                  <i class="fa-solid fa-message"><span class="pl-3 pr-8">560</span></i>
-                  <i class="fa-solid fa-eye" id="view"><span class="pl-3 pr-8">560</span></i>
-                  <i class="fa-solid fa-clock"><span class="pl-3 ">560</span></i>
-                </div>
-                <div class="">
-                  <button onclick="handleClick()"><img src="./images/Vector.png" alt="" class="mt-5 mb-10"></button>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-        <div class=" p-8 rounded-2xl lg:w-1/3">
+        <div class=" p-8 rounded-2xl lg:w-1/3 ">
           <div class="flex justify-between mb-10 ">
             <h1 class=" text-2xl font-bold">Title</h1>
-            <p class="text-lg">Make as read ( <span>4</span> )</p>
+            <p class="text-xl font-semibold">Make as read ( <span class="text-xl font-bold text-green-400"
+                id="readCount">0</span> )</p>
           </div>
-          <div class="flex justify-between gap-5 bg-gray-400 rounded-2xl p-5 mb-5 ">
-            <p class=" font-bold" id="title2">
-            </p>
-            <div id="view2"><i class="fa-solid fa-eye"><span class="pl-3 "></span></i></div>
-          </div>
-          <div class="flex justify-between gap-5 bg-gray-400 rounded-2xl p-5  mb-5">
-            <p class=" font-bold">10 Kids Unaware of Their
-              <br> Halloween Costume
-            </p>
-            <div><i class="fa-solid fa-eye"><span class="pl-3 ">560</span></i></div>
+          <div id="append">
           </div>
         </div>
       </div>
