--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       bottom: 0;
       padding: 0px 15px;
       margin: 5px;
-      background-color: rgb(121, 125, 252);
+      background-color: #797DFC;
       color: #fff;
       border: none;
       border-radius: 50px;
@@ -147,7 +147,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-primary ml-2 rounded-full font-bold text-lg w-32">sign in</button>
+        <button class="btn btn-primary bg-[#797DFC] ml-2 rounded-full font-bold text-lg w-32">sign in</button>
       </div>
       </div>
     </section>
@@ -155,7 +155,7 @@
   <main class="p-4 lg:container mx-auto mt-14">
     <!-- section-1 -->
     <section class="p-4 lg:container mx-auto mt-20">
-      <div class=" p-10 lg:flex justify-between bg-blue-950  rounded-3xl bg-no-repeat bg-bottom bg-cover lg:p-20 "
+      <div class=" p-10 lg:flex justify-between bg-[#12132D] rounded-3xl bg-no-repeat bg-bottom bg-cover lg:p-20 "
         style="background-image: url(./images/banner.png);">
         <div class="">
           <div>
@@ -197,7 +197,7 @@
         <div id="category-bar-container" class="lg:w-3/5">
         </div>
         <div class=" p-8 rounded-2xl lg:w-1/3 ">
-          <div class="flex justify-between mb-10 ">
+          <div class="flex justify-between mb-10  bg-[#12132D0D] p-3 rounded-xl">
             <h1 class=" text-2xl font-bold">Title</h1>
             <p class="text-xl font-semibold">Make as read ( <span class="text-xl font-bold text-green-400"
                 id="readCount">0</span> )</p>
@@ -210,7 +210,7 @@
     </section>
     <!-- section-4 -->
     <section class="p-4 lg:container mx-auto mt-20">
-      <div class=" flex-row lg:flex justify-between  bg-blue-950 rounded-3xl p-10">
+      <div class=" flex-row lg:flex justify-between bg-[#12132D] rounded-3xl p-10">
         <div class="p-10">
           <h1 class="text-white text-2xl lg:text-5xl mb-10 font-bold">Join Our Forum</h1>
           <p class="text-white lg:text-xl mb-10">Share your favorite opinion and win and wp forum coffee mug! Yes, you
@@ -218,7 +218,7 @@
             run unit <br> tests and view the
             results directly
             within the app.</p>
-          <button class="btn btn-active btn-secondary">Registered Now</button>
+          <button class="btn btn-active  bg-[#797DFC]">Registered Now</button>
         </div>
         <div>
           <img src="./images/joinforum.png" alt="">
@@ -256,7 +256,7 @@
         </p>
       </aside>
       <nav>
-        <div class="grid grid-flow-col gap-4 ">
+        <div class="grid grid-flow-col gap-4  ">
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-facebook"></i>
           <i class="fa-brands fa-instagram"></i>
@@ -265,7 +265,7 @@
       </nav>
 
     </footer>
-    <div class="border-t-2 border-gray-400 mt-5 mb-10 w-3/4 mx-auto"> </div>
+    <div class="border-t-2 border-gray-300 mt-5 mb-10 w-3/4 mx-auto"> </div>
     <p class="text-center  pb-10">2017, All Rights Reserved.</p>
   </footer>
 
